Fixed .nav-menu position to "fixed" and bottom: 60rem to 58rem to align profile button to dashboard

--- a/insidebox (1)/css/styles.css
+++ b/insidebox (1)/css/styles.css
@@ -93,7 +93,7 @@ nav ul > li > a:focus
     padding: 1.125rem;
     position: fixed;
     left: 10rem;
-    bottom: 60rem;
+    bottom: 58rem;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
